add resin caves and willow tree

--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -17,7 +17,7 @@ DESERT_TERRACES: 0xe8bb6c
 ROCKY_DESERT: 0xe8b479
 
 PALE_GARDEN: 0x778272
-
+RESIN_ROOTS: 0xd1b26f
 SNOWY_DUNES: 0x92e5e4
 
 SNOWY_BADLANDS: 0x5bbfbd
